# libeventemitter

./: .arcconfig  .arclint  .arcunit  .clang-format  .clangd  .gerrit  .gitattributes  .gitignore  .mediawiki.ini  BriskMakeAll.sh  CONTRIBUTING.md  DOCS.make  LICENSE  LocalSettings.ini.in  MANUAL.md  Makefile  README.md  make_libeventemitter.sh  meson.build  ver.c
.github/PULL_REQUEST_TEMPLATE/: FixIssue.md  NewFeature.md
.github/workflows/: .yamllint  AutoMaster.yaml  DeployAUR.yaml  ExecuteUnits.yaml  Nightly.yaml  QuickFormat.yaml
docs/man/: EventEmitter_controlflags_c.3  EventEmitter_deon_c.3  EventEmitter_emit_c.3  EventEmitter_on_c.3  EventEmitter_once_c.3  EventListener_call_c.3  config.3  create_and_destroy.3  internals.3  libeventemitter_h.3
docs/markdown/: EventEmitter_controlflags_c.md  EventEmitter_deon_c.md  EventEmitter_emit_c.md  EventEmitter_on_c.md  EventEmitter_once_c.md  EventListener_call_c.md  config.md  create_and_destroy.md  internals.md  libeventemitter_h.md
docs/wikitext/: EventEmitter_controlflags_c.wt  EventEmitter_deon_c.wt  EventEmitter_emit_c.wt  EventEmitter_on_c.wt  EventEmitter_once_c.wt  EventListener_call_c.wt  config.wt  create_and_destroy.wt  internals.wt  libeventemitter_h.wt
docs/yelp/mallard/: EventEmitter_controlflags_c.page  EventEmitter_deon_c.page  EventEmitter_emit_c.page  EventEmitter_on_c.page  EventEmitter_once_c.page  EventListener_call_c.page  config.page  create_and_destroy.page  internals.page  libeventemitter_h.page
includes/defines/: libeventemitter.h
includes/defines/libeventemitter/: e.h  ee.h  el.h
includes/libeventemitter/: Makefile
includes/libeventemitter/e/: Makefile  main.c
includes/libeventemitter/ee/: Makefile  main.c
includes/libeventemitter/ee/actions/: Makefile  controlflag.c  deon.c  emit.c  internals.c  internals.h  on.c  once.c
includes/libeventemitter/el/: main.c
includes/libeventemitter/el/actions/: Makefile  call.c
maintenance/: format.sh
maintenance/tests/: main.c
maintenance/tests/liblbeetest/: compile.sh  liblbeetest.c  liblbeetest.h  minify_example.c
maintenance/tests/liblbeetest/depends/libHarryDCjson/: json.h  vector.h
maintenance/tests/units/: 1.c  10.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c
resources/assets/: libee.pc.in
scripts/: libini
